# quick-convert

./: .gitignore  .gitmodules  README.md  a.txt  main.py  precompute_content_dac.sh  precompute_emo2vec.sh  precompute_spk.sh  pyproject.toml  ruff.toml  train_dac.sh
.github/: CODEOWNERS
.github/workflows/: pages.yml
configs/: config.yaml
configs/annotation_providers/: transcript.yaml
configs/anonymizer/: .__future__conditional_rvq.yaml.swp  __future__conditional_rvq.yaml  asrbn.yaml  controllable_rvq.yaml  emotion_compensation.yaml  knnvc.yaml  nac.yaml
configs/architecture/: controllable_rvq.yaml  controllable_rvq_v2.yaml  vq_asr.yaml
configs/architecture/wiring/: controllable_rvq_dims.yaml
configs/asr/: whisper.yaml
configs/asv/: ecapa.yaml  train_ecapa_tdnn.yaml
configs/components/decoders/: chatterbox.yaml
configs/components/encoders/: conformer_encoder.yaml  conformer_encoder_ssl.yaml  linear_head.yaml  linguistic_head.yaml  parallel_conformer.yaml  rvq_disentangler.yaml  rvq_disentangler_v2.yaml  speaker_head.yaml
configs/components/feature_extractor/: content.yaml  speaker_embedding.yaml  tokenizer.yaml
configs/components/layers/: rvq.yaml
configs/components/losses/: ctc_loss.yaml  mse_loss.yaml  speaker_loss.yaml
configs/components/speaker_encoder/: espnet.yaml  pyannote_wespeaker_voxceleb_resnet32_LM.yaml  pyannote_wespeaker_voxceleb_resnet34_LM.yaml
configs/content_encoder/: w2vbert.yaml
configs/dataset/: clac.yaml  iemocap.yaml  libri_manifest.yaml  librispeech.yaml  manifest.yaml  stutter.yaml
configs/global/: default.yaml
configs/metrics/: jiwer_wer.yaml
configs/pipeline/: anonymization.yaml  asv.yaml  build_manifest.yaml  evaluation.yaml  precompute_features.yaml  test.yaml  train.yaml  training.yaml
configs/run/: anonymization_asrbn_clac.yaml  anonymization_asrbn_stutter.yaml  anonymization_knnvc_clac.yaml  anonymize.yaml  anonymize_emocomp_clac.yaml  anonymize_emotion_compensation_iemocap.yaml  anonymize_knnvc_clac.yaml  build_dataset_librispeech_controllable_rvq.yaml  build_flat_manifest_libri.yaml  build_manifest_libri.yaml  eval_asr_librispeech.yaml  eval_asv_clac.yaml  precompute_content_dac_librispeech.yaml  precompute_content_w2vbert_librispeech.yaml  precompute_emo_emo2vec_librispeech.yaml  precompute_f0_stutter.yaml  precompute_speaker_embedding_espnet_wavlm_joint.yaml  precompute_speaker_pyannote_iemocap.yaml  precompute_spk_wavlm_librispeech.yaml  precompute_tokens_librispeech.yaml  test.yaml  test_chatterbox_spectrogram_generator.yaml  test_train_controllable_rvq.yaml  test_train_controllable_rvq2.yaml  test_train_controllable_rvq_dac.yaml  train_asv_clac.yaml  train_asv_clac_asrbn_1069.yaml  train_bpe_tokenizer_librispeech.yaml  train_controllable_rvq_dac_librispeech.yaml  train_controllable_rvq_dac_librispeech_v2.yaml  train_controllable_rvq_librispeech.yaml  train_controllable_rvq_librispeech_v2.yaml  train_vq_asr_librispeech.yaml  train_vq_asr_librispeech_100.yaml
configs/trainer/: controllable_rvq.yaml  controllable_rvq_v2.yaml  lightning.yaml  tokenizer.yaml  vq_asr.yaml
docs/: _config.yml  design_philosophy.md  index.md  installation.md  quickstart.md  training_optimizations.md
docs/components/: dac.md  donors.md  index.md
docs/config/: hydra_structure.md
docs/data/: base_dataset.md  todo.md
quick_convert/cli/: anonymize.py  build_manifest.py  eval_asv.py  evaluate.py  generate_samples.py  main.py  precompute.py  test.py  test_component.py  train.py  train_asv.py
quick_convert/data/: __init__.py  base_dataset.py  clac.py  features.py  manifest_dataset.py  types.py
quick_convert/pipelines/: build_manifest.py  precompute_features.py  train.py
quick_convert/trainers/: abs_anonymizer_trainer.py  controllable_rvq_trainer.py  tokenizer_trainer.py
quick_convert/utils/: __init__.py  audio.py  coqui_tts.py  dataset_splits.py  donor_utils.py  masking.py  paths.py
scripts/: anonymize.py  anonymize.sh  load_crvq.py
(+161 files in other folders)
