[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["quick_convert*"]

[project]
name = "quick-convert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "hydra-core>=1.3.2",
    "hyperpyyaml>=1.2.3",
    "omegaconf>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=1.5.3",
    "soundfile>=0.13.1",
    "speechbrain>=1.1.0",
    "torch==2.6",
    "torchaudio==2.6",
    "transformers>=5.3.0",
    "tts>=0.22.0",
]
[project.scripts]
anonymize = "main:main"
# train_asv = "main:main"
# eval_asv = "main:main"
